# RobotForest

./: .editorconfig  .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle  settings.gradle.back
.github/workflows/: android-debug.yml  android.yml  release-on-tag.yml  runtime-pack.yml  runtime-verify.yml
app/: build.gradle  build.gradle..back  build.gradle.back  build.gradle.bak  proguard-rules.pro
app/src/main/: AndroidManifest.back  AndroidManifest.backuo  AndroidManifest.backup  AndroidManifest.try  AndroidManifest.xml
app/src/main/assets/shaders/: triangle.vert
app/src/main/cpp/: CMakeLists.txt  aaudio_probe.c  asset_extract.c  asset_extract.h  main_android.c  main_android_min_c.bak  proc_exec.c  vk_app.c  vk_app.h  vk_probe.c  vk_skeleton.c  vk_skeleton.c.old  vk_skeleton.h
app/src/main/java/com/robotforest/launcher/: Exec.java  Exec.java.bak  Hashes.java  MainActivity.java  Net.java  RobotForestApp.java  RuntimeBootstrap.java  RuntimeInstaller.java  RuntimeManifest.java  RuntimeUnpacker
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: triangle.frag  triangle.vert
scripts/runtime/: README.md  layout.txt  make_runtime.sh  runtime-manifest.json
tools/: check_embedded_manifest.sh  generate_icon_from_ico.sh  rf_ci_verify_manifest.sh  rf_runtime_preseed.sh  rf_runtime_verify_apk_manifest.sh  rf_runtime_wipe.sh
